# ncbi-acc-download

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
ncbi_acc_download/: __main__.py  core.py  download.py  errors.py  validate.py  wgs.py
tests/: conftest.py  partialcontig.gbk  supercontig.gbk  supercontig_full.gbk  test_core.py  test_correct.py  test_download.py  test_validate.py  test_wgs.py  tsa.gbk  tsa_full.gbk  wgs.gbk  wgs_full.gbk  wgs_scafld.gbk
